Uses Mockito to Mock the database connection for tests.